deployment-kit/kubernetes/security/network-policies/allow-app-to-vault-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-vault-egress
  namespace: app
spec:
  podSelector: {}
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: security
      ports:
        - protocol: TCP
          port: 8200
  policyTypes:
    - Egress
